syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.vncsferrarini.models";

message EmailCredentials {
  string email = 1;
  string password = 2;
}

message PhoneOPT {
  int32 number = 1;
  int32 code = 2;
}

message Credentials {
    oneof mode {
      EmailCredentials emailMode = 1;
      PhoneOPT phoneMode = 2;
    }
}